feat: nearest event and getEvents method answers only relevant events

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,3 +41,6 @@ bot:
 jwt:
   secret: ${JWT_TOKEN_SECRET}
   token-expiration-minutes: ${JWT_TOKEN_EXPIRATION_MIN}
+
+app:
+  timezone: ${APP_TIMEZONE}
