chore: notifications system

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,4 +43,4 @@ jwt:
   token-expiration-minutes: ${JWT_TOKEN_EXPIRATION_MIN}
 
 app:
-  timezone: ${APP_TIMEZONE}
+  timezone: ${APP_TIMEZONE:UTC}
